--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
-title: example.com
+title: Ido's Academic Blog
 description: "Satellite - jekyll blog theme"
 logo_img: "/assets/img/favicon.webp"
 profile_img: "/assets/img/profile.webp"
 
 # Social Links
 email: example@gmail.com
-github_username: github
+github_username: idoji
 twitter_username: twitter
 instagram_username: instagram
 linkedin_username: linkedin
