--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Ido's Academic Blog
+title: "Ido's Academic Blog"
 description: "Satellite - jekyll blog theme"
 logo_img: "/assets/img/favicon.webp"
 profile_img: "/assets/img/profile.webp"
